syntax = "proto3";
package realionetwork.asset.v1;

option go_package = "github.com/realiotech/realio-network/x/asset/priviledges/freeze";

import "cosmos_proto/cosmos.proto";

message MsgFreezeToken {
    repeated string accounts = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}

message MsgUnfreezeToken {
    repeated string accounts = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}